# Spec-First-Agent-Harness

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  llm-profiles.md  quickstart.md
examples/login-api/: README.md
sfah/: __init__.py  __main__.py  cli.py  executor.py  git.py  history.py  io_utils.py  models.py  parser.py  planner.py  reviewer.py  state.py  store.py  workflow.py
sfah/llm/: __init__.py  config.py  models.py  providers.py
tests/: conftest.py  test_cli.py  test_cli_phase2.py  test_cli_phase4.py  test_cli_workflow.py  test_executor.py  test_history.py  test_integration.py  test_llm.py  test_models.py  test_parser.py  test_planner.py  test_reviewer.py  test_state.py  test_store.py  test_workflow.py
